Added a pool data structure. Geatures pointer stability, dynamic growth, free list in the empty slots, generation tracking to avoid accidentally using elements at reused indices ("dangling accesses").

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,3 +26,4 @@ add_subdirectory(test_abseil_stringview_compat)
 add_subdirectory(test_lru_cache)
 add_subdirectory(test_vfs)
 add_subdirectory(test_ref_ptr)
+add_subdirectory(test_pool)
