Added vulkan-2 example.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -7,4 +7,5 @@ add_subdirectory(fatal)
 add_subdirectory(main_wrapper)
 add_subdirectory(assume)
 add_subdirectory(vulkan-1)
+add_subdirectory(vulkan-2)
 add_subdirectory(vulkan-x)
